ADR-0029 M7: G1MsmBackend SPI + FFM-blst backend wired -> 1.4x prove
G1MsmBackend seam (PURE_JAVA default | injectable) threaded through the
prover's 4 G1 MSMs. FFM-blst backend produces bit-identical proofs and gives
1.32-1.41x end-to-end prove speedup (2^12-2^16). Diluted from the MSM's
2.5-3.8x by the still-pure-Java FFT + G2 MSM + per-MSM point conversion.
Next: G2 blst MSM, PK pre-conversion, M9 GraalVM FFM config.

Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>